syntax = "proto3";

package auth;

service AuthService {
  rpc Login(LoginRequest) returns (AuthResponse);
  rpc Register(RegisterRequest) returns (AuthResponse);
  rpc GetUserById(GetUserByIdRequest) returns (User);
}

message LoginRequest {
  string email = 1;
  string password = 2;
}

message RegisterRequest {
  string email = 1;
  string password = 2;
  string name = 3;
}

message AuthResponse {
  string token = 1;
}
message GetUserByIdRequest {
    string userId = 1;
  }

  message User {
    string id = 1;
    string email = 2;
    string name = 3;
  }
  